--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   GO_VERSION: '1.23'
+  GOLANGCI_LINT_VERSION: 'v1.62.2'
 
 jobs:
   lint:
@@ -23,7 +24,7 @@ jobs:
           
       - name: Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${{ env.GOLANGCI_LINT_VERSION }}
           
       - name: Run golangci-lint
         run: golangci-lint run ./...
